# Data-Science-2025

./: .gitignore  DEBUGGING_GUIDE.md  Denzel6.ipynb  FinalAssignmentElsa.ipynb  GRADER_README.md  README.md  Untitled5.ipynb  analyze_completion.py  analyze_feedback.py  check_completion.sh  completion_analysis.csv  completion_analysis.json  config.py  dashboard_grading_history.csv  debug_logger.py  debug_tools.py  deploy_dashboard.sh  grade_assignments.py  grader_config.json  grading_results_all_students.json  index-simple.html  monitor_grading.py  pyproject.toml  requirements.txt  run_grader.sh  run_monitor.sh  script.js  setup_environment.sh  simple-test.html  structure.txt  student_emails.json  test.html  test_debug_system.py  test_results_bismark.json  update_dashboard.py  update_log.txt  validation.py
.github/workflows/: auto-grade.yml  grade_assignments.yml  grade_on_merge.yml  update-dashboard.yml
Assignments/: Analyzer.ipynb  README.md
Assignments/Assignment 12/: Assignment12A.odt
Assignments/Assignment 16/: Assignment16.odt
Assignments/Assignment 17/: Assignment17.odt
Assignments/Assignment3/: Iteration-Q.docx  Project3.docx
Assignments/Assignment4/: Assignment4.3.odt
Assignments/Assignment5&6/: assign-6.odt
Assignments/GroupWork/: GroupAssignemts1.odt
Assignments/assignment-01/: Assign1.ipynb  Assign2.ipynb
Assignments/assignment-03/: Assigment-3.odt
Assignments/assignment-04/: Assignment4.2.odt
Assignments/assignment-07/: Assigment-7.odt
Assignments/assignment-08/: Assignment8.odt
Assignments/assignment-10/: Assignment10.odt
Assignments/assignment-11/: Assigment11.odt
Assignments/assignment-12/: Assignment12.odt
Assignments/assignment-15/: Assignment15.odt
Assignments/assignment-18/: Assignment18.odt
Assignments/assignment-19-20/: Assigment19&20.odt
Assignments/assignment-21/: assignment21.docx
Assignments/assignment-22/: Lecture21_22_Assessment (1).ipynb
Assignments/assignment-23/: Assignment23A.docx  Complexity_Assignment_Lec23B.ipynb
Assignments/assignment-24/: SQL_Assignment.md  starter_assignment.sql
Assignments/assignment-26/: Evaluation.yaml  data-cleaning&analysis.md  requirements.md
Assignments/assignment-27/: assignment27.md  (+1 more)
Class_notes/: README.md
Submissions/: README.md
dashboard/: README.md  completion_analysis.csv  deploy.sh  index.html  script.js  styles.css
doc/: README.md  curriculum.md  merge_report.md
feedback/: Denzel_feedback.md  Elsa_feedback.md  Felix_feedback.md  Frank_feedback.md  Garvey_feedback.md  Group1_feedback.md  Group2_feedback.md  Group3_feedback.md  Group4_feedback.md  Hackathon_feedback.md  Kigen_feedback.md  Lamech_feedback.md  Nahor_feedback.md  Nehemiah_feedback.md  Teddy_feedback.md  Vincent_feedback.md  bismark_feedback.md  john_onyancha_feedback.md  solution_feedback.md  vincent_feedback.md  wilberforce_feedback.md
scripts/: quick_start.sh  test_grader.py
(+523 files in other folders)
